feat: expand Book domain model